# ConTSG-Bench

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs-check.yml  publish-pypi.yml
configs/: README.md
configs/generators/: bridge_synth-m.yaml  bridge_synth-u.yaml  diffusets_synth-m.yaml  diffusets_synth-u.yaml  t2s_synth-m.yaml  t2s_synth-u.yaml  tedit_synth-m.yaml  tedit_synth-u.yaml  text2motion_synth-m.yaml  text2motion_synth-u.yaml  timevqvae_synth-m.yaml  timevqvae_synth-u.yaml  timeweaver_synth-m.yaml  timeweaver_synth-u.yaml  ttscgan_synth-m.yaml  ttscgan_synth-u.yaml  verbalts_synth-m.yaml  verbalts_synth-u.yaml  wavestitch_synth-m.yaml  wavestitch_synth-u.yaml
contsg/: cli.py
contsg/config/: loader.py
contsg/leaderboard/: model_meta.py
docs/: submission_guide.md
docs/plans/: 2026-03-10-dataset-model-requires-generator-yaml.md
hf_space/data/: leaderboard_long.parquet  leaderboard_wide.parquet  model_cards.parquet  version_manifest.json
hf_space/src/tabs/: submission.py
submissions/: timeweaver.yaml
tests/config/: test_loader_paths.py
